codepkg/objects/CTP_FeedbackTypeSubType__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom Setting to store feedback type and feedback sub type</description>
    <fields>
        <fullName>CTP_Case_Type__c</fullName>
        <description>Field to store the case type</description>
        <label>Case Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTP_Feedback_SubType__c</fullName>
        <description>Field to store feedbackSubType for Custom Setting</description>
        <label>Feedback SubType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTP_Feedback_Type__c</fullName>
        <description>Field to store feedback type for custom setting</description>
        <label>Feedback Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FeedbackTypeSubTypeMapping</label>
</CustomObject>